# Reminders

./: README.md  Todo  auth.kra  backend-ideas.kra~  date_parsing.txt  frontend-backend-communication.kra~  ideas.kra~
Backend/: Dockerfile  Todo  build.sh  env  upload-reminders-rust.sh
Backend/reminders-server/: .env  .gitattributes  Cargo.toml  broken_autoreload.sh  db-connect.sh  keygen.sh  seed.sh  seed.sql
Backend/reminders-server/migrations/2019-02-02-090329_create_todos/: up.sql
Backend/reminders-server/migrations/2019-02-04-103138_create_users/: up.sql
Backend/reminders-server/migrations/2019-02-16-091842_create_subscriptions/: up.sql
Backend/reminders-server/migrations/2019-02-16-094754_alter_todos_fk/: down.sql  up.sql
Backend/reminders-server/migrations/2019-02-16-171953_alter_todos_store_times/: down.sql  up.sql
Backend/reminders-server/migrations/2019-02-28-173939_alter_todos_hide_until_done/: down.sql  up.sql
Backend/reminders-server/migrations/2019-03-08-164226_alter_users_todo_hash/: down.sql  up.sql
Backend/reminders-server/migrations/2019-03-24-211139_alter_todos_highlight/: down.sql  up.sql
Backend/reminders-server/migrations/2026-07-04-120000_create_push_state/: down.sql  up.sql
Backend/reminders-server/secrets/: client_secret_1051432813119-3tlshk1cguic32q4bvq8l2b6soab919p.apps.googleusercontent.com.json  jwt_keygen  jwt_secret  private_key.pem  public_key
Backend/reminders-server/src/: .#schema.rs  auth.rs  database.rs  main.rs  models.rs  push.rs  schema.rs  serialize.rs
Backup/: Dockerfile  backup  build-reminders-backup.sh  crontab  restore-local.sh  upload-reminders-backup.sh
Backup/secrets/: credentials
Design/: backend-ideas.kra  backend_capabilities.txt  frontend-backend-communication.kra  ideas.kra  user_stories.txt
Design/StaticMockup/: login.html  reminders.css
Frontend/: Notes  Todo
Frontend/reminders/: .#test  .#webpack.dev.js  :w  analyze.sh  eslint.config.js  favicon-generate.sh  index.html  main.css  package-lock.json  package.json  serve.sh  stats.json  sw.js  tsconfig.json  tslint.json  vite.config.ts  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
Frontend/reminders/dist-static/: main.css
Frontend/reminders/public/: 404.html  50x.html  manifest.json
Frontend/reminders/src/: .#main.css  .gitattributes  404.html  index.html  index.ts  katex.ts  main.css  manifest.json  (+5 more)
Project/: index.html  package-lock.json  package.json  tsconfig.json
Project/src/: .#index.js  index.js  index.ts
StaticMockup/: edit.html  login.html  main.css  reminders.css  reminders.html
(+35 files in other folders)
