[package]
name = "reminders-server"
version = "0.1.0"
authors = ["Thomas Read <thjread@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "^1.0"
serde_derive = "^1.0"
serde = "^1.0"
env_logger = "^0.7"
diesel = { version = "1.4", features = ["postgres", "chrono", "uuid", "r2d2", "numeric"] }
uuid = { version = ">=0.2.0, <0.7.0", features = ["serde", "use_std", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = { version = ">= 0.8, < 0.9"}
bigdecimal = { version = ">= 0.0.10, < 0.0.15" }
actix = "^0.8"
actix-cors = "^0.1"
dotenv = "^0.14"
futures = "^0.1"
frank_jwt = "^3.1"
bcrypt = "^0.6"
serde_json = "^1.0"
failure = "^0.1"
diesel_migrations = "^1.4"
web-push = "^0.5"
tokio = "^0.1"
twox-hash = "^1.3"
