[package]
name = "reminders-server"
version = "0.1.0"
authors = ["Thomas Read <thjread@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid", "r2d2", "numeric"] }
diesel_migrations = "2"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = "0.4"
jsonwebtoken = "9"
bcrypt = "0.17"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }
tokio = { version = "1", features = ["macros", "time", "rt"] }
futures = "0.3"
# twox-hash pinned to 1.x: the todo-list hash must stay byte-identical to what
# deployed clients have stored, and 2.x changed the hasher API
twox-hash = "1.6"
